fixed seach button bug

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                 <button type="button" id="name-search-btn" class="secondary">Search</button>
               </div>
               <div id="name-suggestions" class="suggestions hidden"></div>
+              <div id="name-search-status" class="search-status"></div>
             </label>
           </div>
           <div class="form-row">
