log-in initial implement

--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
           <input id="search" type="search" placeholder="Search products..." />
         </div>
       </div>
+      <div class="auth-box">
+        <div class="auth-row">
+          <input id="auth-email" type="email" placeholder="Email" autocomplete="email" />
+          <input id="auth-password" type="password" placeholder="Password" autocomplete="current-password" />
+          <button id="auth-login-btn">Log In</button>
+          <button id="auth-signup-btn" class="secondary">Sign Up</button>
+          <button id="auth-logout-btn" class="secondary hidden">Log Out</button>
+        </div>
+        <div id="auth-status" class="auth-status"></div>
+      </div>
     </header>
 
     <main class="container grid">
